# reascript-mcp

./: .gitignore  README.md  TODO.md  pyproject.toml
generated_reascripts/: create_midi_item.lua  list_tracks.lua
src/reascript_mcp/: __init__.py  server.py
src/reascript_mcp/tools/: __init__.py  generate_reascript.py  parse_rpp_project.py  write_reascript_file.py
tests/: test_generate_reascript.py  test_parse_rpp_project.py  test_server.py  test_write_reascript_file.py
